k8s/many-example/nginx-ingress/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  #namespace: ingress-nginx 
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
  selector:
    app: ingress-nginx
