k8s/many-example/nginx-ingress/my-ingress.yaml
apiVersion:  extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: zrd.nginx.com
    http:
      paths:
      - path: 
        backend:
          serviceName: nginx-ingress-demo-svc
          servicePort: 80
