k8s/many-example/nginx-ingress/my-nginx-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
spec:
  selector:
    app: ingress-nginx     # --与下面的pod保持一至
    release: canary
  ports:
    - name: http
      targetPort: 80
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deploy-ng
  namespace: ingress-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ingress-nginx       #  --与上面的service保持一至
      release: canary
  template:
    metadata:
      labels:
        app: ingress-nginx      # --与上面的service保持一至
        release: canary
    spec:
      containers:
      - name: ingress-nginx     # --与上面的service保持一至
        image: ikubernetes/myapp:v1
        ports:
        - name: http
          containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30880
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
      nodePort: 30443
  selector:
    app: ingress-nginx

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: zrd.nginx.com             #  --域名
    http:
      paths:
      - path:
        backend:
          serviceName: ingress-nginx    # --service名字
          servicePort: 80
