k8s/many-example/nginx-ingress/my-tomcat-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
  namespace: ingress-nginx
spec:
  selector:
    app: tomcat     # --与下面的pod保持一至
    release: canary
  ports:
    - name: http
      targetPort: 8080
      port: 8080
    - name: ajp
      targetPort: 8009
      port: 8009
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deploy-tomcat
  namespace: ingress-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tomcat      #  --与上面的service保持一至
      release: canary
  template:
    metadata:
      labels:
        app:  tomcat   # --与上面的service保持一至
        release: canary
    spec:
      containers:
      - name: tomcat   # --与上面的service保持一至
        image: tomcat:8.5.32-jre8-alpine
        ports:
        - name: http
          containerPort: 8080
        - name: ajp
          containerPort: 8009

---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-ingress-nginx
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
      nodePort: 30880
    - name: https
      port: 8009
      targetPort: 8009
      protocol: TCP
      nodePort: 30443
  selector:
    app: tomcat

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: tomcat.nginx.com             #  --域名
    http:
      paths:
      - path:
        backend:
          serviceName: tomcat-ingress-nginx # --service名字
          servicePort: 80
